Fri Oct  1 00:21:20 UTC 2021
Hey folks, sorry about all the bandwidth rebuilding Plasma, but there's no
good reason to specify a libexec dir that's different from upsteam's default,
so we've removed that option to let everything fall into the default location.
Only a couple dozen packages seemed to be affected, but it's just safer to
recompile all of them just to be sure. Thanks to fulatas.
a/haveged-1.9.15-x86_64-1.txz:  Upgraded.
a/kernel-generic-5.14.9-x86_64-1.txz:  Upgraded.
a/kernel-huge-5.14.9-x86_64-1.txz:  Upgraded.
a/kernel-modules-5.14.9-x86_64-1.txz:  Upgraded.
a/udisks2-2.9.4-x86_64-1.txz:  Upgraded.
d/kernel-headers-5.14.9-x86-1.txz:  Upgraded.
k/kernel-source-5.14.9-noarch-1.txz:  Upgraded.
kde/akonadi-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-calendar-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-calendar-tools-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-contacts-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-import-wizard-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-mime-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-notes-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadi-search-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akonadiconsole-21.08.1-x86_64-2.txz:  Rebuilt.
kde/akregator-21.08.1-x86_64-2.txz:  Rebuilt.
kde/alkimia-8.1.0-x86_64-2.txz:  Rebuilt.
kde/analitza-21.08.1-x86_64-2.txz:  Rebuilt.
kde/ark-21.08.1-x86_64-2.txz:  Rebuilt.
kde/artikulate-21.08.1-x86_64-2.txz:  Rebuilt.
kde/attica-5.86.0-x86_64-2.txz:  Rebuilt.
kde/audiocd-kio-21.08.1-x86_64-2.txz:  Rebuilt.
kde/baloo-5.86.0-x86_64-2.txz:  Rebuilt.
kde/baloo-widgets-21.08.1-x86_64-2.txz:  Rebuilt.
kde/blinken-21.08.1-x86_64-2.txz:  Rebuilt.
kde/bluedevil-5.22.5-x86_64-2.txz:  Rebuilt.
kde/bluez-qt-5.86.0-x86_64-2.txz:  Rebuilt.
kde/bomber-21.08.1-x86_64-2.txz:  Rebuilt.
kde/bovo-21.08.1-x86_64-2.txz:  Rebuilt.
kde/breeze-5.22.5-x86_64-2.txz:  Rebuilt.
kde/breeze-grub-5.22.5-x86_64-2.txz:  Rebuilt.
kde/breeze-gtk-5.22.5-x86_64-2.txz:  Rebuilt.
kde/breeze-icons-5.86.0-noarch-2.txz:  Rebuilt.