@@ -11,9 +11,25 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Fri,  1 Oct 2021 00:21:20 GMT</pubDate>
-      <lastBuildDate>Fri,  1 Oct 2021 06:59:47 GMT</lastBuildDate>
+      <pubDate>Fri,  1 Oct 2021 05:38:04 GMT</pubDate>
+      <lastBuildDate>Fri,  1 Oct 2021 15:59:44 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.12</generator>
+      <item>
+         <title>Fri,  1 Oct 2021 05:38:04 GMT</title>
+         <pubDate>Fri,  1 Oct 2021 05:38:04 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20211001053804</link>
+         <guid isPermaLink="false">20211001053804</guid>
+         <description>
+           <![CDATA[<pre>
+x/liberation-fonts-ttf-2.1.5-noarch-1.txz:  Upgraded.
+x/libva-utils-2.13.0-x86_64-1.txz:  Upgraded.
+x/noto-fonts-ttf-20171024-noarch-4.txz:  Rebuilt.
+  Package NotoSansCoptic-Regular.ttf and a few other unhinted fonts.
+  Thanks to Roman Dyaba.
+xfce/Greybird-3.22.15-noarch-1.txz:  Upgraded.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Fri,  1 Oct 2021 00:21:20 GMT</title>
          <pubDate>Fri,  1 Oct 2021 00:21:20 GMT</pubDate>
@@ -25,7 +41,7 @@ Hey folks, sorry about all the bandwidth rebuilding Plasma, but there's no
 good reason to specify a libexec dir that's different from upsteam's default,
 so we've removed that option to let everything fall into the default location.
 Only a couple dozen packages seemed to be affected, but it's just safer to
-recompile all of them just to be sure. Thanks to fulatas.
+recompile all of them just to be sure. Thanks to fulalas.
 a/haveged-1.9.15-x86_64-1.txz:  Upgraded.
 a/kernel-generic-5.14.9-x86_64-1.txz:  Upgraded.
 a/kernel-huge-5.14.9-x86_64-1.txz:  Upgraded.
