@@ -1,20 +1,20 @@
-Fri Oct  1 00:29:15 UTC 2021
+Fri Oct  1 05:41:02 UTC 2021
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2021-10-01 00:21 .
+drwxr-xr-x 12 root root      4096 2021-10-01 05:38 .
 -rw-r--r--  1 root root     10064 2016-06-30 18:39 ./ANNOUNCE.14_2
 -rw-r--r--  1 root root     15590 2021-08-07 23:14 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1085510 2021-09-29 19:19 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2021-09-29 19:19 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1085510 2021-10-01 00:29 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2021-10-01 00:29 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root   1682208 2021-10-01 00:21 ./ChangeLog.txt
+-rw-r--r--  1 root root   1682557 2021-10-01 05:38 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2021-10-01 00:14 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2021-10-01 00:14 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1412963 2021-09-29 19:19 ./FILELIST.TXT
+-rw-r--r--  1 root root   1412963 2021-10-01 00:29 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    857170 2021-10-01 00:28 ./PACKAGES.TXT
+-rw-r--r--  1 root root    857170 2021-10-01 05:40 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8564 2016-06-28 21:33 ./README.TXT
 -rw-r--r--  1 root root      3629 2021-10-01 00:04 ./README.initrd
 -rw-r--r--  1 root root     34412 2017-12-01 17:44 ./README_CRYPT.TXT
@@ -715,11 +715,11 @@ drwxr-xr-x  2 root root      4096 2012-09-20 18:06 ./patches
 -rw-r--r--  1 root root       575 2012-09-20 18:06 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2012-09-20 18:06 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2012-09-20 18:06 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2021-10-01 00:28 ./slackware64
--rw-r--r--  1 root root    334970 2021-10-01 00:28 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2021-10-01 00:28 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    415532 2021-10-01 00:27 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4110088 2021-10-01 00:27 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2021-10-01 05:40 ./slackware64
+-rw-r--r--  1 root root    334970 2021-10-01 05:40 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2021-10-01 05:40 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    415532 2021-10-01 05:39 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4123407 2021-10-01 05:40 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
 drwxr-xr-x  2 root root     32768 2021-10-01 00:25 ./slackware64/a
 -rw-r--r--  1 root root       327 2021-07-17 17:47 ./slackware64/a/aaa_base-15.0-x86_64-1.txt
@@ -4327,7 +4327,7 @@ drwxr-xr-x 2 root root     4096 2021-04-06 19:37 ./slackware64/tcl
 -rw-r--r-- 1 root root      227 2021-04-05 19:38 ./slackware64/tcl/tk-8.6.11.1-x86_64-4.txt
 -rw-r--r-- 1 root root  1787828 2021-04-05 19:38 ./slackware64/tcl/tk-8.6.11.1-x86_64-4.txz
 -rw-r--r-- 1 root root      163 2021-04-05 19:38 ./slackware64/tcl/tk-8.6.11.1-x86_64-4.txz.asc
-drwxr-xr-x 2 root root    65536 2021-10-01 00:25 ./slackware64/x
+drwxr-xr-x 2 root root    65536 2021-10-01 05:39 ./slackware64/x
 -rw-r--r-- 1 root root      440 2021-09-04 17:57 ./slackware64/x/OpenCC-1.1.3-x86_64-1.txt
 -rw-r--r-- 1 root root   682700 2021-09-04 17:57 ./slackware64/x/OpenCC-1.1.3-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-09-04 17:57 ./slackware64/x/OpenCC-1.1.3-x86_64-1.txz.asc
@@ -4699,9 +4699,9 @@ drwxr-xr-x 2 root root    65536 2021-10-01 00:25 ./slackware64/x
 -rw-r--r-- 1 root root      277 2021-08-15 17:47 ./slackware64/x/libepoxy-1.5.9-x86_64-1.txt
 -rw-r--r-- 1 root root   301548 2021-08-15 17:47 ./slackware64/x/libepoxy-1.5.9-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-08-15 17:47 ./slackware64/x/libepoxy-1.5.9-x86_64-1.txz.asc
--rw-r--r-- 1 root root      599 2021-05-04 17:55 ./slackware64/x/liberation-fonts-ttf-2.1.4-noarch-1.txt
--rw-r--r-- 1 root root  1474376 2021-05-04 17:55 ./slackware64/x/liberation-fonts-ttf-2.1.4-noarch-1.txz
--rw-r--r-- 1 root root      163 2021-05-04 17:55 ./slackware64/x/liberation-fonts-ttf-2.1.4-noarch-1.txz.asc
+-rw-r--r-- 1 root root      599 2021-10-01 02:40 ./slackware64/x/liberation-fonts-ttf-2.1.5-noarch-1.txt
+-rw-r--r-- 1 root root  1473688 2021-10-01 02:40 ./slackware64/x/liberation-fonts-ttf-2.1.5-noarch-1.txz
+-rw-r--r-- 1 root root      163 2021-10-01 02:40 ./slackware64/x/liberation-fonts-ttf-2.1.5-noarch-1.txz.asc
 -rw-r--r-- 1 root root      425 2021-02-13 12:50 ./slackware64/x/libevdev-1.11.0-x86_64-2.txt
 -rw-r--r-- 1 root root    56092 2021-02-13 12:50 ./slackware64/x/libevdev-1.11.0-x86_64-2.txz
 -rw-r--r-- 1 root root      163 2021-02-13 12:50 ./slackware64/x/libevdev-1.11.0-x86_64-2.txz.asc
@@ -4741,9 +4741,9 @@ drwxr-xr-x 2 root root    65536 2021-10-01 00:25 ./slackware64/x
 -rw-r--r-- 1 root root      423 2021-09-21 02:16 ./slackware64/x/libva-2.13.0-x86_64-2.txt
 -rw-r--r-- 1 root root   174396 2021-09-21 02:16 ./slackware64/x/libva-2.13.0-x86_64-2.txz
 -rw-r--r-- 1 root root      163 2021-09-21 02:16 ./slackware64/x/libva-2.13.0-x86_64-2.txz.asc
--rw-r--r-- 1 root root      294 2021-06-22 17:10 ./slackware64/x/libva-utils-2.12.0-x86_64-1.txt
--rw-r--r-- 1 root root   449452 2021-06-22 17:10 ./slackware64/x/libva-utils-2.12.0-x86_64-1.txz
--rw-r--r-- 1 root root      163 2021-06-22 17:10 ./slackware64/x/libva-utils-2.12.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root      294 2021-10-01 03:29 ./slackware64/x/libva-utils-2.13.0-x86_64-1.txt
+-rw-r--r-- 1 root root   453036 2021-10-01 03:29 ./slackware64/x/libva-utils-2.13.0-x86_64-1.txz
+-rw-r--r-- 1 root root      163 2021-10-01 03:29 ./slackware64/x/libva-utils-2.13.0-x86_64-1.txz.asc
 -rw-r--r-- 1 root root      500 2021-02-13 12:54 ./slackware64/x/libvdpau-1.4-x86_64-3.txt
 -rw-r--r-- 1 root root    56180 2021-02-13 12:54 ./slackware64/x/libvdpau-1.4-x86_64-3.txz
 -rw-r--r-- 1 root root      163 2021-02-13 12:54 ./slackware64/x/libvdpau-1.4-x86_64-3.txz.asc
@@ -4800,9 +4800,9 @@ drwxr-xr-x 2 root root    65536 2021-10-01 00:25 ./slackware64/x
 -rw-r--r-- 1 root root      803 2021-02-13 13:00 ./slackware64/x/noto-cjk-fonts-ttf-2.001-noarch-3.txt
 -rw-r--r-- 1 root root 91118036 2021-02-13 13:00 ./slackware64/x/noto-cjk-fonts-ttf-2.001-noarch-3.txz
 -rw-r--r-- 1 root root      163 2021-02-13 13:00 ./slackware64/x/noto-cjk-fonts-ttf-2.001-noarch-3.txz.asc
--rw-r--r-- 1 root root      710 2021-02-13 13:01 ./slackware64/x/noto-fonts-ttf-20171024-noarch-3.txt
--rw-r--r-- 1 root root 11140276 2021-02-13 13:01 ./slackware64/x/noto-fonts-ttf-20171024-noarch-3.txz
--rw-r--r-- 1 root root      163 2021-02-13 13:01 ./slackware64/x/noto-fonts-ttf-20171024-noarch-3.txz.asc
+-rw-r--r-- 1 root root      710 2021-10-01 05:30 ./slackware64/x/noto-fonts-ttf-20171024-noarch-4.txt
+-rw-r--r-- 1 root root 11603404 2021-10-01 05:30 ./slackware64/x/noto-fonts-ttf-20171024-noarch-4.txz
+-rw-r--r-- 1 root root      163 2021-10-01 05:30 ./slackware64/x/noto-fonts-ttf-20171024-noarch-4.txz.asc
 -rw-r--r-- 1 root root      222 2021-02-13 13:11 ./slackware64/x/oclock-1.0.4-x86_64-4.txt
 -rw-r--r-- 1 root root    21600 2021-02-13 13:11 ./slackware64/x/oclock-1.0.4-x86_64-4.txz
 -rw-r--r-- 1 root root      163 2021-02-13 13:11 ./slackware64/x/oclock-1.0.4-x86_64-4.txz.asc
@@ -5440,10 +5440,10 @@ drwxr-xr-x 2 root root    16384 2021-09-29 19:18 ./slackware64/xap
 -rw-r--r-- 1 root root      230 2021-08-30 05:32 ./slackware64/xap/xsnow-3.3.1-x86_64-1.txt
 -rw-r--r-- 1 root root   215936 2021-08-30 05:32 ./slackware64/xap/xsnow-3.3.1-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-08-30 05:32 ./slackware64/xap/xsnow-3.3.1-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    12288 2021-09-23 19:17 ./slackware64/xfce
--rw-r--r-- 1 root root      253 2021-02-13 13:46 ./slackware64/xfce/Greybird-3.22.14-noarch-3.txt
--rw-r--r-- 1 root root   192668 2021-02-13 13:46 ./slackware64/xfce/Greybird-3.22.14-noarch-3.txz
--rw-r--r-- 1 root root      163 2021-02-13 13:46 ./slackware64/xfce/Greybird-3.22.14-noarch-3.txz.asc
+drwxr-xr-x 2 root root    12288 2021-10-01 05:39 ./slackware64/xfce
+-rw-r--r-- 1 root root      253 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txt
+-rw-r--r-- 1 root root   189900 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txz
+-rw-r--r-- 1 root root      163 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txz.asc
 -rw-r--r-- 1 root root      352 2021-03-10 19:28 ./slackware64/xfce/elementary-xfce-0.15.2-x86_64-1.txt
 -rw-r--r-- 1 root root  5710740 2021-03-10 19:28 ./slackware64/xfce/elementary-xfce-0.15.2-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-03-10 19:28 ./slackware64/xfce/elementary-xfce-0.15.2-x86_64-1.txz.asc
@@ -5548,11 +5548,11 @@ drwxr-xr-x   2 root root      4096 2021-02-15 19:33 ./slackware64/y
 -rw-r--r--   1 root root   1486956 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz
 -rw-r--r--   1 root root       163 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2021-10-01 00:29 ./source
--rw-r--r--   1 root root    579162 2021-10-01 00:29 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       163 2021-10-01 00:29 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    805862 2021-10-01 00:29 ./source/FILE_LIST
--rw-r--r--   1 root root  23285916 2021-10-01 00:29 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2021-10-01 05:41 ./source
+-rw-r--r--   1 root root    579162 2021-10-01 05:41 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       163 2021-10-01 05:41 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    805862 2021-10-01 05:40 ./source/FILE_LIST
+-rw-r--r--   1 root root  23288800 2021-10-01 05:40 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root      1314 2006-10-02 04:40 ./source/README.TXT
 drwxr-xr-x 122 root root      4096 2021-09-25 00:50 ./source/a
 -rw-r--r--   1 root root      1591 2021-04-06 18:09 ./source/a/FTBFSlog
@@ -12807,7 +12807,7 @@ drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/tcl/tk
 -rwxr-xr-x  1 root root      4431 2021-04-05 19:37 ./source/tcl/tk/tk.SlackBuild
 -rw-r--r--  1 root root        48 2021-01-04 23:37 ./source/tcl/tk/tk.url
 -rw-r--r--  1 root root   4496008 2021-01-13 20:19 ./source/tcl/tk/tk8.6.11.1-src.tar.gz
-drwxr-xr-x 81 root root      4096 2021-09-24 17:52 ./source/x
+drwxr-xr-x 81 root root      4096 2021-10-01 05:29 ./source/x
 -rw-r--r--  1 root root      1605 2021-04-06 18:08 ./source/x/FTBFSlog
 drwxr-xr-x  2 root root      4096 2021-09-04 17:57 ./source/x/OpenCC
 -rw-r--r--  1 root root   2078728 2021-09-03 14:26 ./source/x/OpenCC/OpenCC-ver.1.1.3.tar.lz
@@ -13019,7 +13019,7 @@ drwxr-xr-x  2 root root      4096 2021-08-15 17:47 ./source/x/libepoxy
 -rwxr-xr-x  1 root root      3796 2021-04-30 17:36 ./source/x/libepoxy/libepoxy.SlackBuild
 -rw-r--r--  1 root root        81 2021-08-15 17:47 ./source/x/libepoxy/libepoxy.url
 -rw-r--r--  1 root root       765 2018-02-27 06:13 ./source/x/libepoxy/slack-desc
-drwxr-xr-x  3 root root      4096 2021-05-04 17:55 ./source/x/liberation-fonts-ttf
+drwxr-xr-x  3 root root      4096 2021-10-01 02:40 ./source/x/liberation-fonts-ttf
 -rw-r--r--  1 root root      1123 2011-03-23 05:07 ./source/x/liberation-fonts-ttf/60-liberation.conf
 drwxr-xr-x  2 root root      4096 2020-03-09 20:24 ./source/x/liberation-fonts-ttf/docs
 -rw-r--r--  1 root root       242 2020-02-10 00:12 ./source/x/liberation-fonts-ttf/docs/AUTHORS
@@ -13028,8 +13028,8 @@ drwxr-xr-x  2 root root      4096 2020-03-09 20:24 ./source/x/liberation-fonts-t
 -rw-r--r--  1 root root      2359 2020-02-10 00:12 ./source/x/liberation-fonts-ttf/docs/README.md
 -rw-r--r--  1 root root       268 2020-02-10 00:12 ./source/x/liberation-fonts-ttf/docs/TODO
 -rw-r--r--  1 root root       169 2018-06-05 22:37 ./source/x/liberation-fonts-ttf/doinst.sh.gz
--rw-r--r--  1 root root   1474467 2021-05-04 04:23 ./source/x/liberation-fonts-ttf/liberation-fonts-ttf-2.1.4.tar.lz
--rwxr-xr-x  1 root root      2604 2021-05-04 17:55 ./source/x/liberation-fonts-ttf/liberation-fonts-ttf.SlackBuild
+-rw-r--r--  1 root root   1473445 2021-09-30 17:42 ./source/x/liberation-fonts-ttf/liberation-fonts-ttf-2.1.5.tar.lz
+-rwxr-xr-x  1 root root      2604 2021-10-01 02:40 ./source/x/liberation-fonts-ttf/liberation-fonts-ttf.SlackBuild
 -rw-r--r--  1 root root        52 2019-03-12 17:37 ./source/x/liberation-fonts-ttf/liberation-fonts-ttf.url
 -rw-r--r--  1 root root      1067 2018-02-27 06:13 ./source/x/liberation-fonts-ttf/slack-desc
 drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/x/libevdev
@@ -13078,8 +13078,8 @@ drwxr-xr-x  2 root root      4096 2021-09-17 03:15 ./source/x/libpinyin
 -rwxr-xr-x  1 root root      3720 2021-09-17 03:16 ./source/x/libpinyin/libpinyin.SlackBuild
 -rw-r--r--  1 root root       820 2020-11-22 20:13 ./source/x/libpinyin/slack-desc
 drwxr-xr-x  2 root root      4096 2021-09-21 02:16 ./source/x/libva
-drwxr-xr-x  2 root root      4096 2021-06-22 17:10 ./source/x/libva-utils
--rw-r--r--  1 root root    830794 2021-06-22 10:08 ./source/x/libva-utils/libva-utils-2.12.0.tar.lz
+drwxr-xr-x  2 root root      4096 2021-10-01 03:29 ./source/x/libva-utils
+-rw-r--r--  1 root root    818529 2021-09-30 08:21 ./source/x/libva-utils/libva-utils-2.13.0.tar.lz
 -rwxr-xr-x  1 root root      3601 2021-03-24 03:48 ./source/x/libva-utils/libva-utils.SlackBuild
 -rw-r--r--  1 root root        37 2018-11-08 00:17 ./source/x/libva-utils/libva-utils.url
 -rw-r--r--  1 root root       785 2018-02-27 06:13 ./source/x/libva-utils/slack-desc
@@ -13154,13 +13154,13 @@ drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/x/noto-cjk-fonts-ttf
 -rw-r--r--  1 root root        40 2020-02-21 21:36 ./source/x/noto-cjk-fonts-ttf/noto-cjk-fonts-ttf.url
 -rwxr-xr-x  1 root root      3844 2020-02-22 04:48 ./source/x/noto-cjk-fonts-ttf/package-source.sh
 -rw-r--r--  1 root root      1272 2020-07-29 18:55 ./source/x/noto-cjk-fonts-ttf/slack-desc
-drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/x/noto-fonts-ttf
+drwxr-xr-x  2 root root      4096 2021-10-01 05:29 ./source/x/noto-fonts-ttf
 -rw-r--r--  1 root root       169 2018-06-05 22:37 ./source/x/noto-fonts-ttf/doinst.sh.gz
--rw-r--r--  1 root root      2859 2020-07-29 18:25 ./source/x/noto-fonts-ttf/fonts-to-skip.txt
--rw-r--r--  1 root root  11374937 2017-10-24 19:07 ./source/x/noto-fonts-ttf/noto-fonts-subset-20171024.tar.lz
--rwxr-xr-x  1 root root      2279 2021-02-13 05:32 ./source/x/noto-fonts-ttf/noto-fonts-ttf.SlackBuild
+-rw-r--r--  1 root root      2851 2021-10-01 04:59 ./source/x/noto-fonts-ttf/fonts-to-skip.txt
+-rw-r--r--  1 root root  11881131 2017-10-24 19:07 ./source/x/noto-fonts-ttf/noto-fonts-subset-20171024.tar.lz
+-rwxr-xr-x  1 root root      2279 2021-10-01 05:29 ./source/x/noto-fonts-ttf/noto-fonts-ttf.SlackBuild
 -rw-r--r--  1 root root        43 2020-02-22 01:11 ./source/x/noto-fonts-ttf/noto-fonts-ttf.url
--rwxr-xr-x  1 root root      4415 2020-02-25 04:48 ./source/x/noto-fonts-ttf/package-source.sh
+-rwxr-xr-x  1 root root      4516 2021-10-01 05:28 ./source/x/noto-fonts-ttf/package-source.sh
 -rw-r--r--  1 root root      1175 2020-07-29 18:51 ./source/x/noto-fonts-ttf/slack-desc
 drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/x/pyxdg
 -rw-r--r--  1 root root     51404 2020-10-18 14:54 ./source/x/pyxdg/pyxdg-0.27.tar.lz
@@ -14812,9 +14812,9 @@ drwxr-xr-x  2 root root      4096 2021-08-30 05:31 ./source/xap/xsnow
 -rw-r--r--  1 root root        46 2020-12-24 21:51 ./source/xap/xsnow/xsnow.url
 drwxr-xr-x 32 root root      4096 2021-01-15 04:25 ./source/xfce
 -rw-r--r--  1 root root        82 2020-12-05 23:01 ./source/xfce/FTBFSlog
-drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/xfce/Greybird
--rw-r--r--  1 root root    184550 2020-12-17 23:33 ./source/xfce/Greybird/Greybird-3.22.14.tar.lz
--rwxr-xr-x  1 root root      3550 2021-02-13 05:32 ./source/xfce/Greybird/Greybird.SlackBuild
+drwxr-xr-x  2 root root      4096 2021-10-01 03:27 ./source/xfce/Greybird
+-rw-r--r--  1 root root    182942 2021-09-25 10:17 ./source/xfce/Greybird/Greybird-3.22.15.tar.lz
+-rwxr-xr-x  1 root root      3550 2021-10-01 03:27 ./source/xfce/Greybird/Greybird.SlackBuild
 -rw-r--r--  1 root root       742 2020-11-25 21:07 ./source/xfce/Greybird/slack-desc
 drwxr-xr-x  2 root root      4096 2021-03-10 19:24 ./source/xfce/elementary-xfce
 -rw-r--r--  1 root root       377 2019-07-12 10:40 ./source/xfce/elementary-xfce/README
