@@ -23,7 +23,7 @@
 cd $(dirname $0) ; CWD=$(pwd)
 
 PKGNAM=liberation-fonts-ttf
-VERSION=2.1.4
+VERSION=2.1.5
 ARCH=noarch
 BUILD=${BUILD:-1}
 
