@@ -47,7 +47,6 @@ Ugaritic
 ######################################################################################
 Avestan 
 Balinese 
-Coptic 
 Mandaic 
 ################################################################### 
 # === Scripts which may still be used for decorative purposes === #
