@@ -25,7 +25,7 @@ cd $(dirname $0) ; CWD=$(pwd)
 
 PKGNAM=noto-fonts-ttf
 VERSION=${VERSION:-$(echo noto-fonts-subset-*.tar.?z | rev | cut -f 3- -d . | cut -f 1 -d - | rev)}
-BUILD=${BUILD:-3}
+BUILD=${BUILD:-4}
 ARCH=noarch
 
 # If the variable PRINT_PACKAGE_NAME is set, then this script will report what
