@@ -1,9 +1,17 @@
+Fri Oct  1 05:38:04 UTC 2021
+x/liberation-fonts-ttf-2.1.5-noarch-1.txz:  Upgraded.
+x/libva-utils-2.13.0-x86_64-1.txz:  Upgraded.
+x/noto-fonts-ttf-20171024-noarch-4.txz:  Rebuilt.
+  Package NotoSansCoptic-Regular.ttf and a few other unhinted fonts.
+  Thanks to Roman Dyaba.
+xfce/Greybird-3.22.15-noarch-1.txz:  Upgraded.
++--------------------------+
 Fri Oct  1 00:21:20 UTC 2021
 Hey folks, sorry about all the bandwidth rebuilding Plasma, but there's no
 good reason to specify a libexec dir that's different from upsteam's default,
 so we've removed that option to let everything fall into the default location.
 Only a couple dozen packages seemed to be affected, but it's just safer to
-recompile all of them just to be sure. Thanks to fulatas.
+recompile all of them just to be sure. Thanks to fulalas.
 a/haveged-1.9.15-x86_64-1.txz:  Upgraded.
 a/kernel-generic-5.14.9-x86_64-1.txz:  Upgraded.
 a/kernel-huge-5.14.9-x86_64-1.txz:  Upgraded.
